# Nexus

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  README.md  build.sh  setup.sh
apps/java-todo/: README.md  pom.xml
apps/node-todo/: README.md  package.json
apps/node-todo/public/: index.html
apps/node-todo/src/: app.js  server.js
apps/node-todo/src/controllers/: todoController.js
apps/node-todo/src/routes/: index.js  todos.js
apps/node-todo/tests/: todos.test.js
apps/python-todo/: README.md  main.py  pyproject.toml  requirements.txt
apps/python-todo/app/: __init__.py  dependencies.py  routes.py  schemas.py  storage.py
apps/python-todo/tests/: test_todos.py
backend/: requirements.txt
backend/app/: celery_app.py  db.py  main.py  models.py  security.py  tasks.py
backend/app/api/: reports.py  routes.py  users.py
backend/app/core/: __init__.py  analyzer.py  orchestrator.py  plugins.py  udm.py
backend/app/repositories/: reports.py  users.py
backend/tests/: conftest.py  test_api.py  test_plugins.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: client.ts
frontend/src/assets/: main.css
frontend/src/components/: AnalysisPanel.vue  CodeStructureTreemap.vue  DashboardView.vue  DependencyGraph.vue  HistoryPanel.vue  MetricsCards.vue  ProjectSelector.vue  UserSelector.vue
frontend/src/types/: api.ts  udm.ts
plugins/java_analyzer/: pyproject.toml
plugins/java_analyzer/src/nexus_analyzer_java/: __init__.py  plugin.py
plugins/javascript_analyzer/: pyproject.toml
plugins/javascript_analyzer/src/nexus_analyzer_javascript/: __init__.py  plugin.py
plugins/python_analyzer/: pyproject.toml
plugins/python_analyzer/src/nexus_analyzer_python/: __init__.py  plugin.py
(+10 files in other folders)
